# SC2EGSet_article_experiments

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sc2_timeseries.ipynb
src/: sc2_timeseries.ipynb
src/dim_reduction/: pca.py  pca2.py  sc2_dim_reduction.py  sc2_pca.py  sc2_umap.py  tsne.py
src/dim_reduction/utils/: drop_fields_util.py  groupby_util.py  prepare_data_util.py  replacement.py
